# Differentiable-Optimization-Helper

./: .gitmodules  CMakeLists.txt  README.md  setup.py  test.py
src/: diffOptPybind.cpp  ellipseMethods.cpp  ellipseMethods.h  ellipsoidMethods.cpp  ellipsoidMethods.h  smoothMinimumMethods.cpp  smoothMinimumMethods.h
